Added region data to battletag info.